<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.NoActionBar"
    android:orientation="vertical"
    android:padding="26dp"
    android:background="@drawable/backg2"
    android:theme="@style/AppTheme.NoActionBar">

    <ImageView
        android:layout_width="@dimen/logo_w"
        android:layout_height="@dimen/logo_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ilologo" />

    <EditText
        android:background="@drawable/round_field"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/grey_dark"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:background="@drawable/round_field"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:hint="@string/hint_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/grey_dark"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_but"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dengan menekan tombol 'Register', Anda telah menyetujui Syarat dan Ketentuan "
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="10dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_gravity="bottom"/>
</LinearLayout>