<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backg2"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.NoActionBar"
    style="@style/AppTheme.NoActionBar"
    android:orientation="vertical"
    tools:context="com.example.anisahdenis.coba1.ResetPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp">
        <ImageView
            android:id="@+id/btn_back2"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_arrow_back"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/btn_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Reset Password"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="18dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_w2"
            android:layout_height="@dimen/logo_h"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ilologo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Informasi Laundry Online"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_field"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:padding="5dp">

            <EditText
                android:padding="3dp"
                android:background="@null"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/light_blue"
                android:textColorHint="@color/newcol"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125">

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
